@@ -1,3 +1,7 @@
+Thu Aug  5 22:24:37 CEST 2010
+	Fixing timeout bug on systems that think it's still
+	1970 (can happen if system time not initialized). -CG
+
 Mon Jul 26 10:46:57 CEST 2010
 	Releasing libmicrohttpd 0.9.0. -CG
 
